src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;



:root {
    --primary-color: #ed143d;
    --secondary-color: #212529;
}

.bg-primary {
    background-color: var(--primary-color);
}

.text-primary {
    color: var(--primary-color);
}

.bg-secondary {
    background-color: var(--secondary-color);
}

.text-secondary {
    color: var(--secondary-color);
}

.border-primary {
    border: 1px solid var(--primary-color);
}

.border-t-primary {
    border-top: 1px solid var(--primary-color);
}

.border-b-primary {
    border-bottom: 1px solid var(--primary-color);
}

.border-l-primary {
    border-left: 1px solid var(--primary-color);
}

.border-r-primary {
    border-right: 1px solid var(--primary-color);
}

.border-secondary {
    border: 1px solid var(--secondary-color);
}

.border-t-secondary {
    border-top: 1px solid var(--secondary-color);
}

.border-b-secondary {
    border-bottom: 1px solid var(--secondary-color);
}

.border-l-secondary {
    border-left: 1px solid var(--secondary-color);
}

.border-r-secondary {
    border-right: 1px solid var(--secondary-color);
}

.slick-dots li {
    margin: 0px;
}

.slick-dots li button {
    padding: 0px;
}

.slick-dots li button:before {
    font-size: 10px;
}

.details-image::-webkit-scrollbar {
    display: none;
}

.about-bg {
    background-image: url('../../public/assets/about-bg.png');
    height: 100%;
    background-position: center;
    background-size: cover;
    width: 100%;
    background-repeat: no-repeat;
}


/* product rating  */

.rate {
    float: left;
    height: 46px;
}

.rate:not(:checked)>input {
    position: absolute;
    visibility: hidden;
}

.rate:not(:checked)>label {
    float: right;
    width: 1em;
    overflow: hidden;
    white-space: nowrap;
    cursor: pointer;
    font-size: 30px;
    color: #ccc;
}

.rate:not(:checked)>label:before {
    content: '★ ';
}

.rate>input:checked~label {
    color: #faca15;
}

.rate:not(:checked)>label:hover,
.rate:not(:checked)>label:hover~label {
    color: #faca15;
}

.rate>input:checked+label:hover,
.rate>input:checked+label:hover~label,
.rate>input:checked~label:hover,
.rate>input:checked~label:hover~label,
.rate>label:hover~input:checked~label {
    color: #faca15;
}

.mobile-scrollbar::-webkit-scrollbar{
    width: 0px;
}

::-webkit-scrollbar {
    width: 8px;
}

/* Track */
::-webkit-scrollbar-track {
    background: #f1f1f1;
    border-radius: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: #929698;
    border-radius: 10px;
}


/* custom checkbox  */

.form-group input {
    padding: 0;
    height: initial;
    width: initial;
    margin-bottom: 0;
    display: none;
    cursor: pointer;
  }
  
  .custom-checkbox label {
    position: relative;
    cursor: pointer;
  }
  
  .custom-checkbox label:before {
    content:'';
    --webkit-appearance: none;
    background-color: transparent;
    padding: 10px;
    display: inline-block;
    position: relative;
    vertical-align: middle;
    cursor: pointer;
    margin-right: 10px;
  }
  
  .custom-checkbox input:checked + label:after {
    content: '';
    display: block;
    position: absolute;
    top: 8px;
    left: 20px;
    width: 5px;
    height: 11px;
    border: solid #0079bf;
    border-width: 0 1px 1px 0;
    transform: rotate(45deg);
  }

  .custom-checkbox input:checked + label{
    background-color: #dfe1e3;
  }

  strong{
    font-weight: 700;
  }

:where(.css-dev-only-do-not-override-1rqnfsa).ant-collapse>.ant-collapse-item {
    border-bottom: none !important;
}
:where(.css-dev-only-do-not-override-1rqnfsa).ant-collapse .ant-collapse-content {
    /* background-color: transparent !important; */
    border-top: none !important;
}

